--- a/css/style_accueil.css
+++ b/css/style_accueil.css
@@ -1,9 +1,8 @@
 body {
 	background-image : url("../images/accueil.jpeg");
-	background-position : center;
-	/*background-attachment: fixed;*/
+	background-position : center center;
+	background-attachment: fixed;
 	background-repeat : no-repeat;
-  background-size: cover;
 	width: 100vw;
 	height: 100vh;
 }
@@ -17,7 +16,6 @@ body {
 }
 
 h1 {
-	color : white;
 	text-align : center;
-  font-size : 100px;
+  font-size : 50px;
 }
